manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "development"
  namespace: default
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "development"
    spec:
      containers:
        - name: "development"
          image: "compulsoryassignmentacr.azurecr.io/development"
          ports:
          - containerPort: 80
