manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "development"
    labels:
        app: "development"
spec:
    ports:
    - port: 80
      targetPort: 3000
    selector:
        app: "development"
