manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "development"
    labels:
        app: "development"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: springdemo.nothing.tk
          http:
            paths:
            - path: /
              backend:
                serviceName: "development"
                servicePort: 80
